--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@sveltejs/svelte-scroller": "^2.0.7",
     "@types/d3": "^7.4.3",
-    "d3": "^7.9.0"
+    "d3": "^7.9.0",
+    "papaparse": "^5.4.1",
+    "svelte-animated-timeline": "^0.0.1"
   }
 }
