--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@sveltejs/svelte-scroller": "^2.0.7",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "@types/papaparse": "^5.3.14",
     "svelte": "^4.2.8",
     "vite": "^5.0.8"
   },
   "dependencies": {
-    "@sveltejs/svelte-scroller": "^2.0.7",
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
     "papaparse": "^5.4.1",
